--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,32 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="We believe that every pregnancy should be a happy pregnancy! At Bump up, we offer prenatal and postnatal programs to help mummas enjoy their experience of pregnancy and stay healthy, fit and confident to make the best of their bump(y) times."
-    />
+
+    <!-- Meta Tags -->
+    <!-- Primary Meta Tags -->
+    <title>Bumpup | Home</title>
+    <meta name="title" content="Bumpup | Home">
+    <meta name="description" content="We believe that every pregnancy should be a happy pregnancy! At Bump up, we offer prenatal and postnatal programs to help mummas enjoy their experience of pregnancy and stay healthy, fit and confident to make the best of their bump(y) times.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bumpup.co/">
+    <meta property="og:title" content="Bumpup | Home">
+    <meta property="og:description" content="We believe that every pregnancy should be a happy pregnancy! At Bump up, we offer prenatal and postnatal programs to help mummas enjoy their experience of pregnancy and stay healthy, fit and confident to make the best of their bump(y) times.">
+    <meta property="og:image" content="https://res.cloudinary.com/gopal1996/image/upload/v1611752768/Bumpup/Bump_dcbnpk.svg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="http://bumpup.co/">
+    <meta property="twitter:title" content="Bumpup | Home">
+    <meta property="twitter:description" content="We believe that every pregnancy should be a happy pregnancy! At Bump up, we offer prenatal and postnatal programs to help mummas enjoy their experience of pregnancy and stay healthy, fit and confident to make the best of their bump(y) times.">
+    <meta property="twitter:image" content="https://res.cloudinary.com/gopal1996/image/upload/v1611752768/Bumpup/Bump_dcbnpk.svg">
+    <!-- Meta Tags -->
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://res.cloudinary.com">
-    <title>Bumpup</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
