added meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
 
     <!-- Meta Tags -->
     <!-- Primary Meta Tags -->
-    <!-- <title>Bumpup | Home</title>
-    <meta name="title" content="Bumpup | Home"> -->
+    <meta name="keywords" content="Pregnancy fitness,Prenatal fitness,Postnatal fitness ,Online prenatal class,Online pregnancy class,Online postnatal class,Pregnancy class,Prenatal class,Postnatal class,Prenatal exercise,Prenatal exercise class,Pregnancy exercise ,Pregnancy exercise class,Postnatal exercise ,Postnatal exercise class,Preconception class,Pre Pregnancy class,Online pre pregancy class,Online preconception class,Preconception workshop,Pre pregnancy workshop" />
     <meta name="description" content="We believe that every pregnancy should be a happy pregnancy! At Bump up, we offer prenatal and postnatal programs to help mummas enjoy their experience of pregnancy and stay healthy, fit and confident to make the best of their bump(y) times.">
 
     <!-- Open Graph / Facebook -->
