updated meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -13,17 +13,20 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
+    <meta property="og:title" content="Bumpup">
     <meta property="og:url" content="https://bumpup.co/">
-    <!-- <meta property="og:title" content="Bumpup | Home"> -->
     <meta property="og:description" content="We believe that every pregnancy should be a happy pregnancy! At Bump up, we offer prenatal and postnatal programs to help mummas enjoy their experience of pregnancy and stay healthy, fit and confident to make the best of their bump(y) times.">
-    <meta property="og:image" content="https://res.cloudinary.com/gopal1996/image/upload/v1611752768/Bumpup/Bump_dcbnpk.svg">
+    <meta property="og:image" content="https://res.cloudinary.com/gopal1996/image/upload/v1611760010/Bumpup/preview_futwvg.jpg">
+    <meta property="og:image:width" content="554">
+    <meta property="og:image:height" content="554">
+    <meta property="og:image:alt" content="Bumpup Logo">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="http://bumpup.co/">
-    <!-- <meta property="twitter:title" content="Bumpup | Home"> -->
+    <meta property="twitter:title" content="Bumpup">
     <meta property="twitter:description" content="We believe that every pregnancy should be a happy pregnancy! At Bump up, we offer prenatal and postnatal programs to help mummas enjoy their experience of pregnancy and stay healthy, fit and confident to make the best of their bump(y) times.">
-    <meta property="twitter:image" content="https://res.cloudinary.com/gopal1996/image/upload/v1611752768/Bumpup/Bump_dcbnpk.svg">
+    <meta property="twitter:image" content="https://res.cloudinary.com/gopal1996/image/upload/v1611760010/Bumpup/preview_futwvg.jpg">
     <!-- Meta Tags -->
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
